--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "chat-app",
+  "name": "firebase-chat-app",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": ">=14.0.0"
+  },
   "dependencies": {
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "firebase": "^10.12.0",
-    "firebase-admin": "^10.0.2"
+    "express": "^4.18.2"
   }
 }
